tdf#159094 sc: fix failure when exporting media files to PDF

Change-Id: I948190b31f45cf05ba24d1fbc4a84dfe91eb3876
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164557
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164976